<resources>
    <string name="app_name">Pacer Fit</string>
    <string name="empty"> </string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="join2">가입하기</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pwChk">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="man">남</string>
    <string name="woman">여</string>
    <string name="age">나이</string>
    <string name="old">세</string>
    <string name="height">키</string>
    <string name="cm">cm</string>
    <string name="weight">몸무게</string>
    <string name="kg">kg</string>
    <string name="ranking">랭킹</string>
    <string name="chatting">채팅</string>
    <string name="myPage">마이페이지</string>
    <string name="work">운동하기</string>
    <string name="pedometer">만보기</string>
    <string name="km">거리</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CLIENT_ID">eulbpdsotm</string>

</resources>