<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:background="@color/blue_project">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <Button
        android:id="@+id/introJoinBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/skyblue_project"
        android:text="@string/join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/introLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/introJoinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>