<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_project"
    android:contentDescription="@string/app_name">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_project"
        tools:context=".JoinActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/joinIdTextInputLayout"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="20dp"
            android:theme="@style/EditTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinIdTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/id"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/joinPwTextInputLayout"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="20dp"
            android:theme="@style/EditTextStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinIdTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinPwTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/joinPwChkTextInputLayout"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="30dp"
            android:theme="@style/EditTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinPwTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinPwChkTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/pwChk"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/joinNameTextInputLayout"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="30dp"
            android:theme="@style/EditTextStyle"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:counterTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinPwChkTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinNameTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/name"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/gender"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/joinNameTextInputLayout" />



        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender">

            <RadioButton
                android:id="@+id/manRadioBtn"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/man"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/womanRadioBtn"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:buttonTint="@color/white"
                android:checked="false"
                android:text="@string/woman"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />
        </RadioGroup>

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"

            android:text="@string/age"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/joinAgeTxt"
            app:layout_constraintTop_toBottomOf="@+id/joinNameTextInputLayout" />

        <EditText
            android:id="@+id/joinAgeTxt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/age"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_project"
            app:layout_constraintEnd_toStartOf="@+id/txtOld"
            app:layout_constraintTop_toBottomOf="@+id/age"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/old"

            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/joinAgeTxt"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/joinHeightTxt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/height"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_project"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/height"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtCm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"

            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/joinHeightTxt"
            app:layout_constraintStart_toEndOf="@+id/joinHeightTxt" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/joinWeightTxt"
            app:layout_constraintTop_toBottomOf="@+id/joinAgeTxt" />



        <EditText
            android:id="@+id/joinWeightTxt"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/height"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_project"
            app:layout_constraintEnd_toStartOf="@+id/txtKg"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/kg"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/joinWeightTxt"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/joinJoinBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_style"
            android:backgroundTint="@color/skyblue_project"
            android:text="@string/join2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinHeightTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>